# homepage

./: +page.server.ts  .env.example  .gitignore  CLAUDE.md  CODEMAP.md  Dockerfile.android  FORMATTER_REPLACEMENT_SUMMARY.md  MIGRATION_IMAGE_HASHES.md  README.md  README_DEV_AUTH.md  RECURRING_PAYMENTS_SETUP.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  TODO.md  TODO_cleanup.md  deploy-gitea.sh  deploy-searxng.sh  extract_crown.py  package-lock.json  package-lock_old.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  vite.config.ts  vitest.config.ts
.githooks/: pre-commit
docs/: AI_ALT_TEXT_IMPLEMENTATION.md
ocr-service/: README.md  app.py  cospend-ocr.service  requirements.txt
scripts/: android-build-deploy.sh  assign-icon-categories.ts  build-error-page.ts  build-hikes.ts  build-private-images.ts  codemod-app-stores-to-state.ts  codemod-fitness-t-to-m.ts  codemod-href-resolve-bucket2.ts  codemod-href-resolve.ts  codemod-i18n-t-to-m.ts  deploy.sh  download-bring-icons.ts  download-cantons.ts  download-exercise-media.ts  download-models.ts  embed-bls-db.ts  embed-nutrition-db.ts  embed-shopping-categories.ts  embed-shopping-icons.ts  fix-altitudes.ts  hike-photos.sh  (+22 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: remote.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tile-proxy/: .gitignore  Cargo.toml  Makefile  README.md  build.rs
tile-proxy/deploy/: nginx.conf.example  tile-proxy.service
tile-proxy/scripts/: gen-regions.mjs
tile-proxy/src/: main.rs  regions.in
(+1204 files in other folders)
