[package]
name = "bocken-fitness"
version = "0.1.0"
edition = "2021"

[lib]
name = "bocken_fitness_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-geolocation = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
