[package]
name = "tile-proxy"
version = "0.1.0"
edition = "2021"
description = "Region-switching map tile proxy: swisstopo inside Switzerland, global providers elsewhere."

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[profile.release]
opt-level = 3
lto = true
strip = true
